--- a/spells/наслать-страх.md
+++ b/spells/наслать-страх.md
@@ -1,21 +1,15 @@
+# Наслать Страх
 
-Наслать Страх
+|                      |                                            |
+| -------------------- | ------------------------------------------ |
+| Тип                  | Некромантия [Страх, Воздействует на разум] |
+| Уровень              | Брд 1, Жр 1, Маг/Чар 1, Смерть 1           |
+| Компоненты           | В, С                                       |
+| Время Активации      | 1 стандартн. действ.                       |
+| Диапазон             | Ближний (7,5 м+1,5 м/2 ур.)                |
+| Цель                 | Одно живое существо с 5 или меньше КХП     |
+| Длительность         | 1d4 раунда или 1 раунд; смотрите текст     |
+| Спасбросок           | Воля частично                              |
+| Устойчивость к Магии | Да                                         | 
 
-Некромантия [Страх, Воздействует на разум]
-Уровень: Брд 1, Жр 1, Маг/Чар 1, Смерть 1
-Компоненты: В, С
-Время Активации: 1 стандартн. действ.
-Диапазон: Ближний (7,5 м+1,5 м/2 ур.)
-Цель: Одно живое существо с 5 или
-меньше КХП
-Длительность: 1d4 раунда или 1 раунд;
-смотрите текст
-Спасбросок: Воля частично
-Устойчивость к Магии: Да
-Существо, находящееся под воздействием заклинания очень испуганно. Если
-субъект успешно прошел спасбросок
-Воли, то оно всего лишь шокирован на
-1 раунд. Существа с 6 или более КХП
-имунны к эффектам этого заклинания.
-Страх является противоположностью и рассеивается заклинанием снять
-страх.
+Существо, находящееся под воздействием заклинания очень испуганно. Если субъект успешно прошел спасбросок Воли, то оно всего лишь шокирован на 1 раунд. Существа с 6 или более КХП имунны к эффектам этого заклинания. Страх является противоположностью и рассеивается заклинанием снять страх.
