--- a/spells/не-определение.md
+++ b/spells/не-определение.md
@@ -1,30 +1,16 @@
+# Не определение
 
-Не определение
+|                        |                                              |
+| ---------------------- | -------------------------------------------- |
+| Тип                    | Защита                                       |
+| Уровень                | Маг/Чар 3, Мошенничество 3, Рджр 4           |
+| Компоненты             | В, С, М                                      |
+| Время Активации        | 1 стандартн. действ.                         |
+| Диапазон               | Касание                                      | 
+| Цель                   | Касаемое существо или объект                 |
+| Длительность           | 1 час/уровень                                |
+| Спасбросок             | Воля нейтрализует (безвредно, объект)        |
+| Устойчивость к Магии   | Да (безвредно, объект)                       |
+| Материальный Компонент | Щепотка бриллиантовой пыли стоимостью 50 зм. |
 
-Защита
-Уровень: Маг/Чар 3, Мошенничество
-3, Рджр 4
-Компоненты: В, С, М
-Время Активации: 1 стандартн. действ.
-Диапазон: Касание
-Цель: Касаемое существо или объект
-Длительность: 1 час/уровень
-Спасбросок: Воля нейтрализует
-(безвредно, объект)
-Устойчивость к Магии: Да (безвредно,
-объект)
-
-Охраняемое существо или объект
-труднее обнаружить при помощи заклинаний ворожбы, таких как ясновидение/
-яснослышание, обнаруже-ние объекта и
-других обнаруживающих заклинаний.
-Не определение также усложняет использование магических предметов, подобным кристаллическим шарам для
-обнаружения местонахождения. При попытке обнаружить опекаемое существо
-или объект, заклинатель должен сделать
-проверку уровня заклинателя (1d20+уровень заклинания) против КС 11+уровень заклинателя, который активировал
-заклинание не определение. Если вы активировали не определение на себя или
-на свои вещи, то КС 15+ваш уровень заклинателя.
-Заклинание, сактивированное на существе также действует на все его вещи
-и его самого.
-Материальный Компонент: Щепотка
-бриллиантовой пыли стоимостью 50 зм.
+Охраняемое существо или объект труднее обнаружить при помощи заклинаний ворожбы, таких как ясновидение/ яснослышание, обнаруже-ние объекта и других обнаруживающих заклинаний. Не определение также усложняет использование магических предметов, подобным кристаллическим шарам для обнаружения местонахождения. При попытке обнаружить опекаемое существо или объект, заклинатель должен сделать проверку уровня заклинателя (1d20+уровень заклинания) против КС 11+уровень заклинателя, который активировал заклинание не определение. Если вы активировали не определение на себя или на свои вещи, то КС 15+ваш уровень заклинателя. Заклинание, сактивированное на существе также действует на все его вещи и его самого.
