--- a/spells/нейтрализация-яда.md
+++ b/spells/нейтрализация-яда.md
@@ -1,49 +1,16 @@
+# Нейтрализация Яда
 
-Нейтрализация Яда
+|                                  |                                                 |
+| -------------------------------- | ----------------------------------------------- |
+| Тип                              | Колдовство (Лечение)                            |
+| Уровень                          | Брд 4, Дрд 3, Жр 4, Пал 4, Рджр 3               |
+| Компоненты                       | В, С, М/БФ                                      |
+| Время Активации                  | 1 стандартн. действ.                            |
+| Диапазон                         | Касание                                         |
+| Цель                             | Касаемое существо или объект до 30 см.3/уровень |
+| Длительность                     | 10 мин./уровень                                 |
+| Спасбросок                       | Воля нейтрализует (безвредно, объект)           |
+| Устойчивость к Магии             | Да (безвредно, объект)                          | 
+| Волшебный Материальный Компонент | Кусочек древесного угля.                        |
 
-Колдовство (Лечение)
-Уровень: Брд 4, Дрд 3, Жр 4, Пал 4, Рджр 3
-Компоненты: В, С, М/БФ
-Время Активации: 1 стандартн. действ.
-Диапазон: Касание
-Цель: Касаемое существо или объект до
-30 см.3/уровень
-Длительность: 10 мин./уровень
-Спасбросок: Воля нейтрализует
-(безвредно, объект)
-Устойчивость к Магии: Да (безвредно,
-объект)
-Вы нейтрализуете любой вид яда в
-существе или объекте, которого коснулись. Отравленное существо не страдает
-дальше от эффектов яда, и все временные эффекты также прекращаются. Но
-заклинание не снимает мгновенные
-эффекты, такие как потеря хит-поинтов, временная потеря параметров или
-эффекты, которые не проходят сами по
-себе. Например, если яд уменьшил Телосложение на 3 пункта и может причинить дальнейший ущерб, это заклинание
-предотвращает дальнейшие повреждения, но не восстанавливает те, что уже
-нанесены.
-На протяжении длительности этого
-заклинания существо иммунное к любому яду. В отличие от замедления яда,
-отравление не отсрочивается на время
-окончания заклинания – существу не
-надо делать никаких спасбросков от яда
-после окончания заклинания.
-Это заклинание может также нейтрализовать яд в ядовитых существах или
-объектах на протяжении своей длительности по желанию заклинателя.
-Волшебный Материальный Компонент: Кусочек древесного угля.
-
-Неограниченное/Увеличенное
-(Название Заклинания)
-
-Любое из заклинание, чье название начинается с Увеличенный, установлено
-в алфавитном в порядке в соответствии
-со вторым словом в названии заклинания. Поэтому описание увеличенного
-закли-нания расположено рядом с описанием исходного заклинания. Цепочки
-заклинаний, которые могут быть увеличенными заклинаниями включают
-в себя следующие: волшебный взгляд,
-командование, рассеивание магии, глиф
-опеки, невидимость, волшебный клык,
-волшебное оружие, планарный союзник, планарная связка, молящиеся глаза,
-восстановление, магическое слежение,
-теневое колдовство, теневое заклятие,
-крик, телепорт.
+Вы нейтрализуете любой вид яда в существе или объекте, которого коснулись. Отравленное существо не страдает дальше от эффектов яда, и все временные эффекты также прекращаются. Но заклинание не снимает мгновенные эффекты, такие как потеря хит-поинтов, временная потеря параметров или эффекты, которые не проходят сами по себе. Например, если яд уменьшил Телосложение на 3 пункта и может причинить дальнейший ущерб, это заклинание предотвращает дальнейшие повреждения, но не восстанавливает те, что уже нанесены. На протяжении длительности этого заклинания существо иммунное к любому яду. В отличие от замедления яда, отравление не отсрочивается на время окончания заклинания – существу не надо делать никаких спасбросков от яда после окончания заклинания. Это заклинание может также нейтрализовать яд в ядовитых существах или объектах на протяжении своей длительности по желанию заклинателя. 
