--- a/spells/ночной-кошмар.md
+++ b/spells/ночной-кошмар.md
@@ -1,68 +1,32 @@
+# Ночной Кошмар
 
-Ночной Кошмар
+|                      |                                               |
+| -------------------- | --------------------------------------------- |
+| Тип                  | Иллюзия (Фантом) [Воздействует на разум; Зло] |
+| Уровень              | Брд 5, Маг/Чар 5                              |
+| Компоненты           | В, С                                          |
+| Время Активации      | 10 минут                                      |
+| Диапазон             | Неограниченно                                 |
+| Цель                 | Одно живое существо                           |
+| Длительность         | Постоянно                                     |
+| Спасбросок           | Воля нейтрализует; смотрите текст             |
+| Устойчивость к Магии | Да                                            |
 
-Иллюзия (Фантом) [Воздействует на
-разум; Зло]
-Уровень: Брд 5, Маг/Чар 5
-Компоненты: В, С
-Время Активации: 10 минут
-Диапазон: Неограниченно
-Цель: Одно живое существо
-Длительность: Постоянно
-Спасбросок: Воля нейтрализует;
-смотрите текст
-Устойчивость к Магии: Да
+Вы насылаете ужасное призрачное видение на определенное существо, которое вы называете или указывает иным образом. Ночной кошмар не дает нормально спать и наносит 1d10 пунктов повреждений. После такого сна существо остается уставшим и не способно восстановить волшебные заклинания в течение последующих 24 часов. Сложность спасброска зависит от того, насколько хорошо вы знаете субъекта и от того, какого вида физическая связь между вами существует.
 
-Вы насылаете ужасное призрачное видение на определенное существо, которое
-вы называете или указывает иным образом. Ночной кошмар не дает нормально
-спать и наносит 1d10 пунктов повреждений. После такого сна существо остается уставшим и не способно восстановить волшебные заклинания в течение
-последующих 24 часов. Сложность
-спасброска зависит от того, насколько
-хорошо ы знаете субъекта и от того, какого вида физическая связь между вами
-существует.
-Знание
-Нет
-Второстепенное (Вы
-когда-то слышали о
-субъекте)
-Лично знакомы (вы
-встречались с субъектом)
-Хорошо знакомы (вы
-хорошо знаете субъекта)
-1
+|Знание|Модификатор Воли|
+|---|---|
+|Нет|+10|
+|Второстепенное (Вы когда-то слышали о субъекте)|+5|
+|Лично знакомы (вы встречались с субъектом)|0|
+|Хорошо знакомы (вы хорошо знаете субъекта)|-5|
 
-Модификатор
-Воли
-+10
-+5
-0
--5
+У Вас должен быть какой-либо вид связи с существом, которого Вы не знаете.
 
-1 У Вас должен быть какой-либо вид
-связи с существом, которого Вы не знаете.
-Связь
+|Связь|Модификатор Воли|
+|---|---|
+|Описание или картина|-2|
+|Одежда или предмет, принадлежащий существу|-4|
+|Кусочек кожи, клок волос, ноготь и т.п.|-10|
 
-Описание или картина
-Одежда или предмет,
-принадлежащий существу
-Кусочек кожи, клок волос,
-ноготь и т.п.
-
-Модификатор
-Воли
--2
--4
--10
-
-Рассеивание зла, сактивированное на
-субъект в то время, пока вы активируете свое заклинание, рассеивает ночной
-кошмар и ошеломляет вас на 10 минут
-за уровень заклинателя, активировавшего рассеивание зла.
-Если реципиент просыпается в момент начала заклинания, вы можете прервать активацию (окончить заклинание)
-или войти в транс пока жертва снова не
-заснет, и тогда вы сможете закончить активацию. Если вас потревожили во время транса, вы должны сделать проверку
-Концентрации (смотрите стр. 76), или
-заклинание прекращается.
-Когда вы в трансе, вы ничего не замечаете вокруг. Вы беззащитны физически
-и ментально (к примеру, вы проваливаете любой спасбросок).
-Существа, которые не спят или не видят снов (эльфы, но не полу-эльфы, иммунные к этому заклинанию).
+Рассеивание зла, сактивированное на субъект в то время, пока вы активируете свое заклинание, рассеивает ночной кошмар и ошеломляет вас на 10 минут за уровень заклинателя, активировавшего рассеивание зла. Если реципиент просыпается в момент начала заклинания, вы можете прервать активацию (окончить заклинание) или войти в транс пока жертва снова не заснет, и тогда вы сможете закончить активацию. Если вас потревожили во время транса, вы должны сделать проверку Концентрации (смотрите стр. 76), или заклинание прекращается. Когда вы в трансе, вы ничего не замечаете вокруг. Вы беззащитны физически и ментально (к примеру, вы проваливаете любой спасбросок). Существа, которые не спят или не видят снов (эльфы, но не полу-эльфы, иммунные к этому заклинанию). 
