--- a/spells/облик-дерева.md
+++ b/spells/облик-дерева.md
@@ -1,26 +1,14 @@
 
-Облик Дерева
+# Облик Дерева
 
-Превращение
-Уровень: Дрд 2, Рджр 3
-Компоненты: В, С, БФ
-Время Активации: 1 стандартн. действ.
-Диапазон: Лично
-Цель: Вы
-Длительность: 1 час/уровень
-Применив это, заклинание вы можете
-принять форму Большого живого дерева, или куста, или Большого мертвого
-дерева с небольшим количеством ветвей. Даже самое пристальное изучение
-не сможет определить что под видом
-обычного дерева, магически скрывается живое существо. Для всех обычных
-проверок вы будете оставаться обычным деревом или кустом не более, хотя
-применения на вас заклинания обнаружение магии, укажет на слабую ауру
-школы превращения. В форме дерева
-вы можете наблюдать окружающую вас
-обстановку так же как и в вашем обычном облике, все ваши спасброски и хитпоинты остаются прежними. Вы получаете +10 природный бонус к вашему
-КД, но эффективный показатель Ловкости понижается до 0, скорость также
-равна 0 м В облике дерева вы имунны
-к критическим попаданиям. Вся одежда
-и снаряжение которое было при вас, изменяется вместе с вами.
-Вы можете прервать заклинание в
-любой момент, и снова принять обычную форму свободным действием (вместо стандартного действия).
+|                 |                      |
+| --------------- | -------------------- |
+| Тип             | Превращение          |
+| Уровень         | Дрд 2, Рджр 3        |
+| Компоненты      | В, С, БФ             |
+| Время Активации | 1 стандартн. действ. |
+| Диапазон        | Лично                |
+| Цель            | Вы                   |
+| Длительность    | 1 час/уровень        |
+
+Применив это, заклинание вы можете  принять форму Большого живого дерева, или куста, или Большого мертвого  дерева с небольшим количеством ветвей. Даже самое пристальное изучение  не сможет определить что под видом  обычного дерева, магически скрывается живое существо. Для всех обычных  проверок вы будете оставаться обычным деревом или кустом не более, хотя  применения на вас заклинания обнаружение магии, укажет на слабую ауру  школы превращения. В форме дерева  вы можете наблюдать окружающую вас  обстановку так же как и в вашем обычном облике, все ваши спасброски и хитпоинты остаются прежними. Вы получаете +10 природный бонус к вашему  КД, но эффективный показатель Ловкости понижается до 0, скорость также  равна 0 м В облике дерева вы имунны  к критическим попаданиям. Вся одежда  и снаряжение которое было при вас, изменяется вместе с вами.  Вы можете прервать заклинание в  любой момент, и снова принять обычную форму свободным действием (вместо стандартного действия).
