--- a/spells/обнаружение-зла.md
+++ b/spells/обнаружение-зла.md
@@ -1,73 +1,35 @@
 
-Обнаружение Зла
+# Обнаружение Зла
 
-Ворожба
-Уровень: Жр 1
-Компоненты: В, С, БФ
-Время Активации: 1 стандартн. действ.
-Диапазон: 18 м
-Цель: Конусообразное излучение
-Длительность: Концентрация, до 10
-мин./уровень (П)
-Спасброски: Нет
-Устойчивость к Магии: Нет
-Вы можете чувствовать присутствие
-зла. Информация, которую вы получаете, зависит от того, насколько долго вы
-наблюдали за определенной областью
-или субъектом.
-1-ый раунд: Присутствие или отсутст-вие зла
-2-ой раунд: Число злых аур (существ, объектов, заклинаний) в зоне
-поражения, и наиболее мощную ауру
-зла из присутствующих. Если вы доброго мировоззрения, а самая сильная
-из аур подавляет вас (смотрите ниже), и
-КХП или уровень источника ауры в два
-раза выше вашего уровня персонажа,
-вы ошарашены на 1 раунд, а действие
-заклинания оканчивается.
-3-й раунд: Силу и местонахождение
-каждой из аур. Если аура не находится
-на линии вашего обзора, то вы лишь
-получаете информацию о направлении
-в котором оно находится, но не его местоположение.
-Сила Ауры: Сила злой ауры зависит
-от типа злого существа или объекта, которого вы определяете, его КХП, уровня заклинателя, или уровня (в случае
-жреца) класса; смотрите сопровождающую таблицу. Если аура превышает более чем на одну категорию силы, аура
-обозначает более сильную из них.
-Например, как отмечено в таблице
-злой внешний с 12 КХП обладает подавляющей аурой зла. Добрый жрец
-сактивировавший это заклинание, и
-направивший его в направлении такого
-существа более чем на 1 раунд, ошеломлен на 1 раунд и теряет это заклинание,
-если его уровень персонажа 6 и ниже.
-Задержка Ауры: Злая аура имеет
-свойство задерживаться после того, как
-её источник рассеялся (в случае заклинания), или уничтожен (в случае заклинания или магического предмета). Если
-обнаружение зла сактивировано и направлено в это место, заклинание указывает на присутствие ауры с тусклой
-силой (даже слабее чем незначительная
-аура). Как долго аура задерживается в
-таком тусклом состоянии зависит от её
-оригинального источника силы:
+|                      |                                      |
+| -------------------- | ------------------------------------ |
+| Тип                  | Ворожба                              |
+| Уровень              | Жр 1                                 |
+| Компоненты           | В, С, БФ                             |
+| Время Активации      | 1 стандартн. действ.                 |
+| Диапазон             | 18 м                                 |
+| Цель                 | Конусообразное излучение             |
+| Длительность         | Концентрация, до 10 мин./уровень (П) |
+| Спасброски           | Нет                                  |
+| Устойчивость к Магии | Нет                                  |
 
-Исходная Сила
-Незначительная
-Средняя
-Сильная
-Подавляющая
+Вы можете чувствовать присутствие  зла. Информация, которую вы получаете, зависит от того, насколько долго вы  наблюдали за определенной областью  или субъектом.
+|            |                                                                                                                                                                                                                                                                                                                                                  |
+| ---------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| 1-ый раунд | Присутствие или отсутствие зла                                                                                                                                                                                                                                                                                                                   |
+| 2-ой раунд | Число злых аур (существ, объектов, заклинаний) в зоне поражения, и наиболее мощную ауру  зла из присутствующих. Если вы доброго мировоззрения, а самая сильная  из аур подавляет вас (смотрите ниже), и  КХП или уровень источника ауры в два  раза выше вашего уровня персонажа,  вы ошарашены на 1 раунд, а действие  заклинания оканчивается. |
+| 3-й раунд  | Силу и местонахождение  каждой из аур. Если аура не находится  на линии вашего обзора, то вы лишь  получаете информацию о направлении  в котором оно находится, но не его местоположение.                                                                                                                                                        |
 
-Длительность
-Задержки Ауры
-1d6 раундов
-1d6 минут
-1d6×10 минут
-1d6 дней
+Сила Ауры: Сила злой ауры зависит от типа злого существа или объекта, которого вы определяете, его КХП, уровня заклинателя, или уровня (в случае  жреца) класса; смотрите сопровождающую таблицу. Если аура превышает более чем на одну категорию силы, аура обозначает более сильную из них.  Например, как отмечено в таблице  злой внешний с 12 КХП обладает подавляющей аурой зла. Добрый жрец  сактивировавший это заклинание, и  направивший его в направлении такого  существа более чем на 1 раунд, ошеломлен на 1 раунд и теряет это заклинание,  если его уровень персонажа 6 и ниже.
+Задержка Ауры: Злая аура имеет  свойство задерживаться после того, как  её источник рассеялся (в случае заклинания), или уничтожен (в случае заклинания или магического предмета). Если  обнаружение зла сактивировано и направлено в это место, заклинание указывает на присутствие ауры с тусклой  силой (даже слабее чем незначительная  аура). Как долго аура задерживается в  таком тусклом состоянии зависит от её  оригинального источника силы:
 
-Животные, ловушки, яды и прочие
-потенциальные опасности не являются
-злыми, и поэтому такое заклинание не
-обнаруживает их.
-Каждый раунд вы можете изменять
-направление поиска зла. Заклинание
-может преодолевать барьеры, однако
-ему не пройти сквозь 0,3 м камня, 2,5
-см. металла, тонкий слой свинца или
-0,9 м дерева или грязи.
+|                |                            |
+| -------------- | -------------------------- |
+| Исходная Сила  | Длительность Задержки Ауры |
+| Незначительная | 1d6 раундов                |
+| Средняя        | 1d6 минут                  |
+| Сильная        | 1d6×10 минут               |
+| Подавляющая    | 1d6 дней                   |
+
+
+Животные, ловушки, яды и прочие  потенциальные опасности не являются  злыми, и поэтому такое заклинание не  обнаруживает их.  Каждый раунд вы можете изменять  направление поиска зла. Заклинание  может преодолевать барьеры, однако  ему не пройти сквозь 0,3 м камня, 2,5  см. металла, тонкий слой свинца или  0,9 м дерева или грязи.
