--- a/spells/обнаружение-путей.md
+++ b/spells/обнаружение-путей.md
@@ -1,81 +1,17 @@
 
-Обнаружение Путей
+# Обнаружение Путей
 
-Ворожба
-Уровень: Брд 6, Дрд 6, Жр 6, Знание 6,
-Путешествие 6
-Компоненты: В, С, Ф
-Время Активации: 3 раунда
-Диапазон: Лично или касание
-Цель: Вы или касаемое существо
-Длительность: 10 мин./уровень
-Спасбросок: Нет или Воля нейтрализует
-Устойчивость к Магии: Нет или Да
-(безвредно)
+|                      |                                                                                                                  |
+| -------------------- | ---------------------------------------------------------------------------------------------------------------- |
+| Тип                  | Ворожба                                                                                                          |
+| Уровень              | Брд 6, Дрд 6, Жр 6, Знание 6, Путешествие 6                                                                      |
+| Компоненты           | В, С, Ф                                                                                                          |
+| Время Активации      | 3 раунда                                                                                                         |
+| Диапазон             | Лично или касание                                                                                                |
+| Цель                 | Вы или касаемое существо                                                                                         |
+| Длительность         | 10 мин./уровень                                                                                                  |
+| Спасбросок           | Нет или Воля нейтрализует                                                                                        |
+| Устойчивость к Магии | Нет или Да (безвредно)                                                                                           |
+| Фокусирование        | Комплект фишек для ворожбы (непосредственно вашей) – кости, четки из слоновой кости, палочки, резные руны и т.д. |
 
-Реципиент этого заклинания способен находить самые короткие и самые
-прямые из физических маршрутов к необходимому пункту назначения, будучи
-знакомым или незнакомым с дорогой.
-Место действия может быть на открытом воздухе, под землей, и даже внутри
-заклинания лабиринт. Обнаружение
-путей действует в соответствии с местностью, а не объектами или существами места действий. Поэтому субъект не
-сможет найти короткую дорогу «к лесу
-где живет зеленый дракон» или «лежит
-гора платиновых монет», но сможет
-найти выход из лабиринта. Местоположение должно быть на том же плане где
-и вы во время активации.
-Заклинание позволяет субъекту ощущать правильное направление, которое
-сможет вывести его к точке назначения,
-указывая соответствующее время, которое займет для преодоления пути, или
-необходимые физические действия.
-Например, заклинание позволит вам
-ощутить, что нужно передвигаться по
-канатам, или дать необходимое слово
-для преодоления глифа опеки. Заклинание заканчивается когда достигнута
-точка назначения, или когда заканчивается время длительности заклинания,
-смотря, что будет первым. Заклинание
-обнаружение путей может быть использовано для снятия с субъекта и его
-компаньонов эффектов заклинания лабиринт за одни раунд.
-Эта ворожба связана с реципиентом,
-а не его компаньонами, и его эффект не
-прогнозирует или овечает за действия
-существ (включая стражей).
-Фокусирование: Комплект фишек
-для ворожбы (непосредственно вашей)
-– кости, четки из слоновой кости, палочки, резные руны и т.д.
-
-Обнаружение Секретных
-Дверей
-
-Ворожба
-Уровень: Брд 1, Знание 1, Маг/Чар 1
-Компоненты: В, С
-Время Активации: 1 стандартн. действ.
-Диапазон: 18 м
-Цель или Зона: Конусообразное
-излучение
-Длительность: Концентрация, до 1
-мин./уровень (П)
-Спасброски: Нет
-Устойчивость к Магии: Нет
-Вы обнаруживаете секретные двери,
-проходы ниши т.д. Только проходы,
-двери или отверстия, которые были
-сконструированы так, чтобы находится
-в скрытом состоянии, обнаруживаются
-этим заклинанием, обычный люк-ловушка под кучей мусора обнаружен не
-будет. Информация, которую вы получаете, зависит от того, насколько долго
-вы наблюдали за определенной областью или объектом.
-1-ый раунд: Присутствие или отсутст-вие секретных дверей.
-2-ой раунд: Число секретных дверей
-и их местоположение. Если аура вне
-вашего поля зрения, вы определяете её
-направление, но не знаете местоположение.
-Каждый Дополнительный Раунд:
-Механизм или инициатор действия
-одного конкретного секретного портала, который вы исследуете.
-Каждый раунд вы можете изменять
-направление поиска секретных дверей.
-Заклинание может преодолевать барьеры, однако ему не пройти сквозь 0,3
-м камня, 2,5 см. металла, тонкий слой
-свинца или 0,9 м дерева или грязи.
+Реципиент этого заклинания способен находить самые короткие и самые  прямые из физических маршрутов к необходимому пункту назначения, будучи  знакомым или незнакомым с дорогой.  Место действия может быть на открытом воздухе, под землей, и даже внутри  заклинания лабиринт. Обнаружение  путей действует в соответствии с местностью, а не объектами или существами места действий. Поэтому субъект не  сможет найти короткую дорогу «к лесу  где живет зеленый дракон» или «лежит  гора платиновых монет», но сможет  найти выход из лабиринта. Местоположение должно быть на том же плане где  и вы во время активации.  Заклинание позволяет субъекту ощущать правильное направление, которое  сможет вывести его к точке назначения,  указывая соответствующее время, которое займет для преодоления пути, или  необходимые физические действия.  Например, заклинание позволит вам  ощутить, что нужно передвигаться по  канатам, или дать необходимое слово  для преодоления глифа опеки. Заклинание заканчивается когда достигнута  точка назначения, или когда заканчивается время длительности заклинания,  смотря, что будет первым. Заклинание  обнаружение путей может быть использовано для снятия с субъекта и его  компаньонов эффектов заклинания лабиринт за одни раунд.  Эта ворожба связана с реципиентом,  а не его компаньонами, и его эффект не  прогнозирует или овечает за действия  существ (включая стражей).
