--- a/spells/обнаружение-силков-и-ямловушек.md
+++ b/spells/обнаружение-силков-и-ямловушек.md
@@ -1,59 +1,23 @@
 
-Обнаружение Силков и ЯмЛовушек
+# Обнаружение Силков-Ям-Ловушек
 
-Ворожба
-Уровень: Дрд 1, Рджр 1
-Компоненты: В, С
-Время Активации: 1 стандартн. действ.
-Диапазон: 18 м
-Цель или Зона: Конусообразное
-излучение
-Длительность: Концентрация, до 10
-мин./уровень (П)
-Спасброски: Нет
-Устойчивость к Магии: Нет
-Вы обнаруживаете простые ямы, западни, капканы и силки, а также механические ловушки изготовленные из
-природных материалов. Заклинание не
-обнаруживает комплексные ловушки,
-включая ловушки встроенные в двери.
-Обнаружение силков и ям-ловушек
-– обнаруживает определенные природные угрозы: зыбучие пески (силок),
-___ (яма), ненадежные стены или природная порода (западня). Однако оно
-не обнаруживает другие потенциально опасные состояния, как например
-пещера затопляемая во время дождя,
-ненадежное строение, или природное
-ядовитое растение. Это заклинание не
-обнаруживает магические ловушки (за
-исключением тех, что действуют в яме,
-западне или силке; смотрите описание
-заклинания силок), или те, что являются
-механически сложными, а также те что
-не активны или уже безопасны. Информация, которую вы получаете, зависит
-от того, насколько долго вы наблюдали
+|                      |                                      |
+| -------------------- | ------------------------------------ |
+| Тип                  | Ворожба                              |
+| Уровень              | Дрд 1, Рджр 1                        |
+| Компоненты           | В, С                                 |
+| Время Активации      | 1 стандартн. действ.                 |
+| Диапазон             | 18 м                                 |
+| Цель или Зона        | Конусообразное излучение             |
+| Длительность         | Концентрация, до 10 мин./уровень (П) |
+| Спасброски           | Нет                                  |
+| Устойчивость к Магии | Нет                                  |
 
-за определенной областью.
-1-ый раунд: Присутствие или отсутствие опасностей.
-2-ой раунд: Число опасностей и их
-местоположение. Если опасность вне
-вашего поля зрения, вы определяете её
-направление, но не знаете местоположение.
-Каждый Дополнительный Раунд:
-Общий тип и инициатор действия
-одной конкретной опасности, которую
-вы исследуете.
-Каждый раунд вы можете изменять
-направление поиска силков и ям-ловушек. Заклинание может преодо-левать
-барьеры, однако ему не пройти сквозь
-0,3 м камня, 2,5 см. металла, тонкий
-слой свинца или 0,9 м дерева или грязи.
+Вы обнаруживаете простые ямы, западни, капканы и силки, а также механические ловушки изготовленные из природных материалов. Заклинание не обнаруживает комплексные ловушки, включая ловушки встроенные в двери. Обнаружение силков и ям-ловушек – обнаруживает определенные природные угрозы: зыбучие пески (силок), ___ (яма), ненадежные стены или природная порода (западня). Однако оно не обнаруживает другие потенциально опасные состояния, как например пещера затопляемая во время дождя, ненадежное строение, или природное ядовитое растение. Это заклинание не обнаруживает магические ловушки (за исключением тех, что действуют в яме, западне или силке; смотрите описание заклинания силок), или те, что являются механически сложными, а также те что не активны или уже безопасны. Информация, которую вы получаете, зависит от того, насколько долго вы наблюдали за определенной областью.
 
-Обнаружение Хаоса
-Ворожба
-Уровень: Жр 1
+| Раунд                | Действие                                                                                                                                                                                                                                                                                                  |
+| -------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| 1-ый раунд           | Присутствие или отсутствие опасностей.                                                                                                                                                                                                                                                                    |
+| 2-ой раунд           | Число опасностей и их местоположение. Если опасность вне вашего поля зрения, вы определяете её направление, но не знаете местоположение.                                                                                                                                                                  | 
+| Дополнительный Раунд | Общий тип и инициатор действия одной конкретной опасности, которую вы исследуете. Каждый раунд вы можете изменять направление поиска силков и ям-ловушек. Заклинание может преодолевать барьеры, однако ему не пройти сквозь 0,3 м камня, 2,5 см. металла, тонкий слой свинца или 0,9 м дерева или грязи. |
 
-Это заклинание действует аналогично
-заклинанию обнаружение зла, за тем
-лишь исключением что определяет ауру
-хаотических существ, жрецов хаотичных божеств, заклинания хаоса, хаотичные магические предметы. Если вы
-являетесь законным по мировоззрению
-то есть вероятность того что вы подвергнетесь влиянию ауры хаоса.
