--- a/spells/обнаружение-яда.md
+++ b/spells/обнаружение-яда.md
@@ -1,25 +1,16 @@
 
-Обнаружение Яда
+# Обнаружение Яда
 
-Ворожба
-Уровень: Дрд 0, Жр 0, Маг/Чар 0, Пал 1,
-Рджр 1
-Компоненты: В, С
-Время Активации: 1 стандартн. действ.
-Диапазон: Ближний (7,5 м+1,5 м/2 ур.)
-Цель или Зона: Одно существо, один
-объект, или куб со стороной 1,5 м
-Длительность: Мгновенно
-Спасброски: Нет
-Устойчивость к Магии: Нет
-Вы определяете, ядовит или отравлен
-объект, существо или определенная
-зона. С помощью проверки Мудрости
-против КС 20, вы можете определить
-тип яда. Если проверка Мудрости неудачна, персонаж с навыком Ремесло
-(алхимия) можете попытаться пройти
-его против КС 20, или пройти проверку Ремесла (алхимия) вместо проверки
-Мудрости.
-Заклинание может преодолевать барьеры, однако ему не пройти сквозь 0,3
-м камня, 2,5 см. металла, тонкий слой
-свинца или 0,9 м дерева или грязи.
+|                      |                                                       |
+| -------------------- | ----------------------------------------------------- |
+| Тип                  | Ворожба                                               |
+| Уровень              | Дрд 0, Жр 0, Маг/Чар 0, Пал 1, Рджр 1                 |
+| Компоненты           | В, С                                                  |
+| Время Активации      | 1 стандартн. действ.                                  |
+| Диапазон             | Ближний (7,5 м+1,5 м/2 ур.)                           |
+| Цель или Зона        | Одно существо, один объект, или куб со стороной 1,5 м |
+| Длительность         | Мгновенно                                             |
+| Спасброски           | Нет                                                   |
+| Устойчивость к Магии | Нет                                                   |
+
+Вы определяете, ядовит или отравлен объект, существо или определенная зона. С помощью проверки Мудрости против КС 20, вы можете определить тип яда. Если проверка Мудрости неудачна, персонаж с навыком Ремесло (алхимия) можете попытаться пройти его против КС 20, или пройти проверку Ремесла (алхимия) вместо проверки Мудрости. Заклинание может преодолевать барьеры, однако ему не пройти сквозь 0,3 м камня, 2,5 см. металла, тонкий слой свинца или 0,9 м дерева или грязи.
