--- a/spells/обратная-гравитация.md
+++ b/spells/обратная-гравитация.md
@@ -1,30 +1,17 @@
 
-Обратная Гравитация
+# Обратная Гравитация
 
-Превращение
-Уровень: Дрд 8, Маг/Чар 7
-Компоненты: В, С, М, БФ
-Время Активации: 1 стандартн. действ.
-Диапазон: Средний (30 м+3 м/ур.)
-Зона: До 3 м³/2 уровня (О)
-Длительность: 1 раунд/уровень (П)
-Спасбросок: Нет; смотрите текст
-Устойчивость к Магии: Нет
-Заклинание отменяет гравитацию в
-какой-либо зоне, заставляя все неукрепленные объекты и существа в этой области «падать» вверх и достигать самой
-верхней точки области за 1 раунд. Если
-какой-либо твердый объект (например,
-потолок) встречается на пути, объекты и существа ударяются о него также, как если бы она падали на землю.
-Если объект или существо достигает
+|                                  |                           |
+| -------------------------------- | ------------------------- |
+| Тип                              | Превращение               |
+| Уровень                          | Дрд 8, Маг/Чар 7          |
+| Компоненты                       | В, С, М, БФ               |
+| Время Активации                  | 1 стандартн. действ.      |
+| Диапазон                         | Средний (30 м+3 м/ур.)    |
+| Зона                             | До 3 м³/2 уровня (О)      |
+| Длительность                     | 1 раунд/уровень (П)       |
+| Спасбросок                       | Нет; смотрите текст       |
+| Устойчивость к Магии             | Нет                       |
+| Волшебный Материальный Компонент | Магнит и железные опилки. |
 
-самой верхней точки без каких-либо
-препятствий, они остаются там, слегка
-покачиваясь, до конца заклинания. По
-окончании длительности заклинания,
-зачарованные объекты или существа
-падают вниз.
-Если есть что-то, что может их удержать, существа в зоне поражения могут
-сделать попытку спасброска Рефлекса,
-чтобы не взлететь. Существа, умеющие
-летать или левитировать, могут предохранять себя от падения.
-Волшебный Материальный Компонент: Магнит и железные опилки.
+Заклинание отменяет гравитацию в какой-либо зоне, заставляя все неукрепленные объекты и существа в этой области «падать» вверх и достигать самой верхней точки области за 1 раунд. Если какой-либо твердый объект (например, потолок) встречается на пути, объекты и существа ударяются о него также, как если бы она падали на землю. Если объект или существо достигает самой верхней точки без каких-либо препятствий, они остаются там, слегка покачиваясь, до конца заклинания. По окончании длительности заклинания, зачарованные объекты или существа падают вниз. Если есть что-то, что может их удержать, существа в зоне поражения могут сделать попытку спасброска Рефлекса, чтобы не взлететь. Существа, умеющие летать или левитировать, могут предохранять себя от падения.
