--- a/spells/общение-с-камнем.md
+++ b/spells/общение-с-камнем.md
@@ -1,18 +1,14 @@
 
-Общение с Камнем
+# Общение с Камнем
 
-Ворожба
-Уровень: Дрд 6
-Компоненты: В, С, БФ
-Время Активации: 10 минут
-Диапазон: Лично
-Цель: Вы
-Длительность: 1 мин./уровень
-Вы получаете способность говорить
-с камнями. Прикоснувшись к ним, вы
-узнаете то что скрыто за или под ними,
-рассказывают вам что или кто когдалибо касался к ним. При вопросе камни
-передают детальное описание. Отношение, восприятие и знание камня может
-предотвращать камень от определенных
-деталей, какие вы пытаетесь разузнать
-(определяется МП). Вы способны разговаривать с природным или обработанным камнем.
+|                 |                |
+| --------------- | -------------- |
+| Тип             | Ворожба        |
+| Уровень         | Дрд 6          |
+| Компоненты      | В, С, БФ       |
+| Время Активации | 10 минут       |
+| Диапазон        | Лично          |
+| Цель            | Вы             |
+| Длительность    | 1 мин./уровень |
+
+Вы получаете способность говорить с камнями. Прикоснувшись к ним, вы узнаете то что скрыто за или под ними, рассказывают вам что или кто когдалибо касался к ним. При вопросе камни передают детальное описание. Отношение, восприятие и знание камня может предотвращать камень от определенных деталей, какие вы пытаетесь разузнать (определяется МП). Вы способны разговаривать с природным или обработанным камнем.
