--- a/spells/общение.md
+++ b/spells/общение.md
@@ -1,38 +1,16 @@
 
-Общение
+# Общение
 
-Ворожба
-Уровень: Жр 5
-Компоненты: В, С, М, БФ, Оп
-Время Активации: 10 минут
-Диапазон: Лично
-Цель: Вы
-Длительность: 1 раунд/уровень
-Вы входите в контакт со своим божеством или его посланником, и можете
-задавать вопросы, на которые можно
-дать ответ только да или нет (Жрец,
-не имеющий божества, получает связь
-с тем богом, который философически
-наиболее ближе к нему). Вы можете
-задать один вопрос за каждый уровень
-заклинателя. Если существо из другого
-измерения располагает необходимыми знаниями, для того чтобы ответить
-на ваш вопрос, то вы получаете ясный
-ответ. Если ваш ответ это «Неведомо»,
-то в конце концов, даже мощь существ
-из Внешних Планов имеет свои границы. В случае если задаваемый вопрос
-может быть запутанным или противоречивым для интересов божества, МП
-может дать в качестве ответа короткую
-фразу (не более 5 слов).
-Это заклинание, в лучшем случае,
-предоставляет информацию, для того
-чтобы помочь персонажу сформировать
-свое решение. Контактируемые существа могут выстраивать свои ответы в
-соответствии со своими собственными
-дальнейшими намерениями. Если вы
-запоздаете с вопросом, начнете обсуждать полученный ответ или займетесь
-чем то совершенно другим, то эффект
-заклинания закончится.
-Материальные компоненты: Святая
-(или нечестивая) вода и ладан.
-Стоимость Оп: 100 Оп.
+|                         |                                       |
+| ----------------------- | ------------------------------------- |
+| Тип                     | Ворожба                               |
+| Уровень                 | Жр 5                                  |
+| Компоненты              | В, С, М, БФ, Оп                       |
+| Время Активации         | 10 минут                              |
+| Диапазон                | Лично                                 |
+| Цель                    | Вы                                    |
+| Длительность            | 1 раунд/уровень                       |
+| Материальные компоненты | Святая (или нечестивая) вода и ладан. |
+| Стоимость Оп            | 100 Оп.                               |
+
+Вы входите в контакт со своим божеством или его посланником, и можете задавать вопросы, на которые можно дать ответ только да или нет (Жрец, не имеющий божества, получает связь с тем богом, который философически наиболее ближе к нему). Вы можете задать один вопрос за каждый уровень заклинателя. Если существо из другого измерения располагает необходимыми знаниями, для того чтобы ответить на ваш вопрос, то вы получаете ясный ответ. Если ваш ответ это «Неведомо», то в конце концов, даже мощь существ из Внешних Планов имеет свои границы. В случае если задаваемый вопрос может быть запутанным или противоречивым для интересов божества, МП может дать в качестве ответа короткую фразу (не более 5 слов). Это заклинание, в лучшем случае, предоставляет информацию, для того чтобы помочь персонажу сформировать свое решение. Контактируемые существа могут выстраивать свои ответы в соответствии со своими собственными дальнейшими намерениями. Если вы запоздаете с вопросом, начнете обсуждать полученный ответ или займетесь чем то совершенно другим, то эффект заклинания закончится.
