--- a/spells/огненная-ловушка.md
+++ b/spells/огненная-ловушка.md
@@ -1,47 +1,17 @@
 
-Огненная Ловушка
+# Огненная Ловушка
 
-Защита [Огонь]
-Уровень: Дрд 2, Маг/Чар 4
-Компоненты: В, С, М
-Время Активации: 10 минут
-Диапазон: Касание
-Цель: Касаемый объект
-Длительность: Постоянно до тех пор,
-пока не выпущено
-Спасбросок: Рефлекс половина;
-смотрите текст;
-Устойчивость к Магии: Да
-Огненная ловушка создает огненный
-взрыв, как только нарушитель открывает предмет, который защищает ловушка. Огненная ловушка может защищать
-любой объект, который можно открыть
-или закрыть (книгу, коробку, бутылку,
-сундук, гроб, сейф, дверь, ящик комода
-и т.д.).
-При активации огненной ловушки вы
-выбираете точку на объекте как центр
-заклинания. Когда кто-то кроме вас попытается открыть его, произойдет огненный взрыв с 1,5 метровым радиусом
-в центре заклинания. Пламя наносит
-1d4 повреждений огнем плюс 1 пункт
-повреждений за каждый уровень заклинателя (максимум +20). Предмет защищенный этой ловушкой не повреждается этим взрывом.
-Защищенный огненной ловушкой
-предмет не можно повторно защищать
-этим заклинанием или другим защищающим заклинанием.
-Заклинание стук не позволяет проходить сквозь огненную ловушку. Неудачно
-применение заклинания рассеивание магии не взрывает заклинание.
-В подводных условиях это заклинание наносит половину повреждений и
-создает большое облако пара.
-Вы можете использовать объект с огненной ловушкой не разряжая его, как и
-любая личность, к которой специально
-расположен объект во время активации.
-Настройка объекта с огненной ловушкой
-под личность обычно подразумевает
-пароль, которым она может поделиться
-со своими друзьями.
-На заметку: Волшебные ловушки
-такие как огненная ловушка тяжело заметить и обезвредить. Вор (и только)
-способен применять навык Поиска для
-обнаружения огненной ловушки и Блокировка Устройств для её обезвреживания. КС в таком случае 25+уровень заклинания (КС 27 для огненной ловушки
-друида или КС 29 для волшебной версии).
-Материальный Компонент: 225 гр.
-золотой пыли (стоимостью 25 зм) рассыпаемый над охраняемым объектом.
+|                        |                                                                              |
+| ---------------------- | ---------------------------------------------------------------------------- |
+| Тип                    | Защита [Огонь]                                                               |
+| Уровень                | Дрд 2, Маг/Чар 4                                                             |
+| Компоненты             | В, С, М                                                                      |
+| Время Активации        | 10 минут                                                                     |
+| Диапазон               | Касание                                                                      |
+| Цель                   | Касаемый объект                                                              |
+| Длительность           | Постоянно до тех пор, пока не выпущено                                       |
+| Спасбросок             | Рефлекс половина; смотрите текст;                                            |
+| Устойчивость к Магии   | Да                                                                           |
+| Материальный Компонент | 225 гр. золотой пыли (стоимостью 25 зм) рассыпаемый над охраняемым объектом. |
+
+Огненная ловушка создает огненный взрыв, как только нарушитель открывает предмет, который защищает ловушка. Огненная ловушка может защищать любой объект, который можно открыть или закрыть (книгу, коробку, бутылку, сундук, гроб, сейф, дверь, ящик комода и т.д.). При активации огненной ловушки вы выбираете точку на объекте как центр заклинания. Когда кто-то кроме вас попытается открыть его, произойдет огненный взрыв с 1,5 метровым радиусом в центре заклинания. Пламя наносит 1d4 повреждений огнем плюс 1 пункт повреждений за каждый уровень заклинателя (максимум +20). Предмет защищенный этой ловушкой не повреждается этим взрывом. Защищенный огненной ловушкой предмет не можно повторно защищать этим заклинанием или другим защищающим заклинанием. Заклинание стук не позволяет проходить сквозь огненную ловушку. Неудачно применение заклинания рассеивание магии не взрывает заклинание. В подводных условиях это заклинание наносит половину повреждений и создает большое облако пара. Вы можете использовать объект с огненной ловушкой не разряжая его, как и любая личность, к которой специально расположен объект во время активации. Настройка объекта с огненной ловушкой под личность обычно подразумевает пароль, которым она может поделиться со своими друзьями. На заметку: Волшебные ловушки такие как огненная ловушка тяжело заметить и обезвредить. Вор (и только) способен применять навык Поиска для обнаружения огненной ловушки и Блокировка Устройств для её обезвреживания. КС в таком случае 25+уровень заклинания (КС 27 для огненной ловушки друида или КС 29 для волшебной версии).
