--- a/spells/опутывание.md
+++ b/spells/опутывание.md
@@ -1,31 +1,15 @@
+# Опутывание
 
-Опутывание
+|                      |                                       |
+| -------------------- | ------------------------------------- |
+| Тип                  | Превращение                           |
+| Уровень              | Дрд 1, Растение 1, Рджр 1             |
+| Компоненты           | В, С, БФ                              |
+| Время Активации      | 1 стандартн. действ.                  |
+| Диапазон             | Дальний (120 м+12 м/ур.)              |
+| Цель                 | Растения в расширении с 12 м радиусом |
+| Длительность         | 1 мин./уровень (П)                    |
+| Спасбросок           | Рефлекс частично; смотрите текст      |
+| Устойчивость к Магии | Нет                                   |
 
-Превращение
-Уровень: Дрд 1, Растение 1, Рджр 1
-Компоненты: В, С, БФ
-Время Активации: 1 стандартн. действ.
-Диапазон: Дальний (120 м+12 м/ур.)
-Цель: Растения в расширении с 12 м
-радиусом
-Длительность: 1 мин./уровень (П)
-Спасбросок: Рефлекс частично;
-смотрите текст
-Устойчивость к Магии: Нет
-
-Трава, кустарники и даже деревья начинают извиваться и опутывать всех
-существ в зоне поражения, или тех, кто
-в неё входит, удерживая их на месте, и
-делая опутанными. Существо может
-вырваться из опутывания, и передвигаться с половиной своей скорости,
-применяя полнораундовое действие,
-но перед этим пройдя проверку Силы
-против КС 20, или Искусство Побега
-против КС 20. Существа успешно прошедшее проверку Рефлекса не опутаны, но все также передвигаются лишь
-с половиной своей скорости через зону
-поражения. Каждый раунд в ваш ход,
-растения вновь попытаются опутать
-всех существ, которые избежали или
-вырвались из опутывания.
-Ко вниманию: МП может изменять
-эффект заклинания, базируясь на природе опутывающих растений.
+Трава, кустарники и даже деревья начинают извиваться и опутывать всех существ в зоне поражения, или тех, кто в неё входит, удерживая их на месте, и делая опутанными. Существо может вырваться из опутывания, и передвигаться с половиной своей скорости, применяя полнораундовое действие, но перед этим пройдя проверку Силы против КС 20, или Искусство Побега против КС 20. Существа успешно прошедшее проверку Рефлекса не опутаны, но все также передвигаются лишь с половиной своей скорости через зону поражения. Каждый раунд в ваш ход, растения вновь попытаются опутать всех существ, которые избежали или вырвались из опутывания. Ко вниманию: МП может изменять эффект заклинания, базируясь на природе опутывающих растений.
