--- a/spells/орда-элементалей.md
+++ b/spells/орда-элементалей.md
@@ -1,34 +1,15 @@
+# Орда Элементалей
 
-Орда Элементалей
+|                      |                                                                        |
+| -------------------- | ---------------------------------------------------------------------- |
+| Тип                  | Колдовство (Призыв) [смотрите текст]                                   |
+| Уровень              | Вода 9, Воздух 9, Дрд 9, Земля 9, Огонь 9                              |
+| Компоненты           | В, С                                                                   |
+| Время Активации      | 10 минут                                                               |
+| Диапазон             | Средний (30 м+3 м/ур.)                                                 |
+| Эффект               | Двое или более призванных существ, расстояние между двумя не более 9 м |
+| Длительность         | 10 мин./уровень (П)                                                    |
+| Спасбросок           | Нет                                                                    |
+| Устойчивость к Магии | Нет                                                                    |
 
-Колдовство (Призыв) [смотрите текст]
-Уровень: Вода 9, Воздух 9, Дрд 9, Земля
-9, Огонь 9
-Компоненты: В, С
-Время Активации: 10 минут
-Диапазон: Средний (30 м+3 м/ур.)
-Эффект: Двое или более призванных
-существ, расстояние между двумя не
-более 9 м
-Длительность: 10 мин./уровень (П)
-Спасбросок: Нет
-Устойчивость к Магии: Нет
-Это заклинание открывает портал на
-Элементальный План и призывает оттуда элементалей. Друид может выбирать
-план (Вода, Воздух, Земля или Огонь);
-жрец открывает лишь портал соответствующий его сфере.
-Когда заклинание окончено, появляется 2d4 Больших элементали. Десять
-минут спустя 1d4 Огромных элементали, а ещё десять минут спустя одна
-великая элементаль. У каждой из элементалей по максимуму хит-поинтов на
-каждый КХП. Как только эти создания
-появились, они служат вам до окончания длительности заклинания.
-Элементали беспрекословно вам
-подчиняются, и никогда на вас не нападают, даже когда кто-то берет их под
-контроль. Для поддержания контроля
-над элементалями вам нет нужды поддерживать концентрацию. Вы может
-вернуть их назад поодиночке или группами в любой момент времени.
-Когда вы используете заклинание
-призыва для вызова водных, воздушных, земных или огненных существ,
-это заклинание становится заклинанием данного типа. К примеру, заклинание орда элементалей является огненным заклинанием, если вы призываете
-огненных элементалей, и водным, если
-вы призываете водных элементалей.
+Это заклинание открывает портал на Элементальный План и призывает оттуда элементалей. Друид может выбирать план (Вода, Воздух, Земля или Огонь); жрец открывает лишь портал соответствующий его сфере. Когда заклинание окончено, появляется 2d4 Больших элементали. Десять минут спустя 1d4 Огромных элементали, а ещё десять минут спустя одна великая элементаль. У каждой из элементалей по максимуму хит-поинтов на каждый КХП. Как только эти создания появились, они служат вам до окончания длительности заклинания. Элементали беспрекословно вам подчиняются, и никогда на вас не нападают, даже когда кто-то берет их под контроль. Для поддержания контроля над элементалями вам нет нужды поддерживать концентрацию. Вы может вернуть их назад поодиночке или группами в любой момент времени. Когда вы используете заклинание призыва для вызова водных, воздушных, земных или огненных существ, это заклинание становится заклинанием данного типа. К примеру, заклинание орда элементалей является огненным заклинанием, если вы призываете огненных элементалей, и водным, если вы призываете водных элементалей.
