--- a/spells/неопределимое-мировоззрение.md
+++ b/spells/неопределимое-мировоззрение.md
@@ -1,14 +1,16 @@
 
-Неопределимое Мировоззрение
+# Неопределимое Мировоззрение
 
-Защита
-Уровень: Брд 1, Жр 1, Пал 2
-Компоненты: В, С
-Время активации: 1 стандартн. действ.
-Диапазон: Ближний (7,5 м+1,5 м/2 ур.)
-Цель: Одно существо или объект
-Длительность: 24 часа
-Спасбросок: Воля нейтрализует (объект)
-Устойчивость к Магии: Да (объект)
-Это заклинание защищает от опре-деления любыми формами ворожбы, мировоззрение выбранного существа или
-объекта.
+|                      |                             |
+| -------------------- | --------------------------- |
+| Тип                  | Защита                      |
+| Уровень              | Брд 1, Жр 1, Пал 2          |
+| Компоненты           | В, С                        |
+| Время активации      | 1 стандартн. действ.        |
+| Диапазон             | Ближний (7,5 м+1,5 м/2 ур.) |
+| Цель                 | Одно существо или объект    | 
+| Длительность         | 24 часа                     |
+| Спасбросок           | Воля нейтрализует (объект)  |
+| Устойчивость к Магии | Да (объект)                 |
+
+Это заклинание защищает от определения любыми формами ворожбы, мировоззрение выбранного существа или объекта.
