--- a/spells/обнаружение-ловушек.md
+++ b/spells/обнаружение-ловушек.md
@@ -1,21 +1,14 @@
 
-Обнаружение Ловушек
+# Обнаружение Ловушек
 
-Ворожба
-Уровень: Жр 2
-Компоненты: В, С
-Время Активации: 1 стандартн. действ.
-Диапазон: Лично
-Цель: Вы
-Длительность: 1 мин./уровень
-Вы приобретаете врожденную ин-туицию относительно того, как действуют
-ловушки. Вы способны использовать
-навык Поиск, чтобы обнаруживать ловушки точно также как и вор. В дополнение на время действия заклинания,
-вы получаете бонус проницательности,
-который равен половине вашего уровня
-заклинателя (максимум +10), ко всем
-проверкам Поиска при обнаружении
-ловушек.
-Но отметьте для себя, обнаружение
-ловушек не наделяет вас возможностью
-обезвреживания найденных ловушек.
+|                 |                      |
+| --------------- | -------------------- |
+| Тип             | Ворожба              |
+| Уровень         | Жр 2                 |
+| Компоненты      | В, С                 |
+| Время Активации | 1 стандартн. действ. |
+| Диапазон        | Лично                |
+| Цель            | Вы                   |
+| Длительность    | 1 мин./уровень       |
+
+Вы приобретаете врожденную ин-туицию относительно того, как действуют  ловушки. Вы способны использовать  навык Поиск, чтобы обнаруживать ловушки точно также как и вор. В дополнение на время действия заклинания,  вы получаете бонус проницательности,  который равен половине вашего уровня  заклинателя (максимум +10), ко всем  проверкам Поиска при обнаружении  ловушек.  Но отметьте для себя, обнаружение  ловушек не наделяет вас возможностью  обезвреживания найденных ловушек.
